cmake_policy(SET CMP0015 NEW)

aux_source_directory(. SRC_LIST)
list(REMOVE_ITEM SRC_LIST "./createRandomTest.cpp")
list(REMOVE_ITEM SRC_LIST "./checkRandomTest.cpp")

list(REMOVE_ITEM SRC_LIST "./boostTest.cpp")
list(REMOVE_ITEM SRC_LIST "./commonjs.cpp")
list(REMOVE_ITEM SRC_LIST "./crypto.cpp")
list(REMOVE_ITEM SRC_LIST "./dagger.cpp")
list(REMOVE_ITEM SRC_LIST "./fork.cpp")
list(REMOVE_ITEM SRC_LIST "./genesis.cpp")
list(REMOVE_ITEM SRC_LIST "./hexPrefix.cpp")
list(REMOVE_ITEM SRC_LIST "./jsonrpc.cpp")
list(REMOVE_ITEM SRC_LIST "./main.cpp")
list(REMOVE_ITEM SRC_LIST "./natspec.cpp")
list(REMOVE_ITEM SRC_LIST "./rlp.cpp")
list(REMOVE_ITEM SRC_LIST "./TestHelper.cpp")
list(REMOVE_ITEM SRC_LIST "./vm.cpp")
list(REMOVE_ITEM SRC_LIST "./kademlia.cpp")
list(REMOVE_ITEM SRC_LIST "./net.cpp")
list(REMOVE_ITEM SRC_LIST "./peer.cpp")
list(REMOVE_ITEM SRC_LIST "./stateOriginal.cpp")
list(REMOVE_ITEM SRC_LIST "./state.cpp")
list(REMOVE_ITEM SRC_LIST "./transaction.cpp")
list(REMOVE_ITEM SRC_LIST "./TrieHash.cpp")
list(REMOVE_ITEM SRC_LIST "./whisperTopic.cpp")

include_directories(${Boost_INCLUDE_DIRS})
include_directories(${CRYPTOPP_INCLUDE_DIRS})
include_directories(${JSONCPP_INCLUDE_DIRS})
include_directories(${JSON_RPC_CPP_INCLUDE_DIRS})
include_directories(..)

file(GLOB HEADERS "*.h")
add_executable(testeth ${SRC_LIST} ${HEADERS})
add_executable(createRandomTest createRandomTest.cpp vm.cpp TestHelper.cpp)
add_executable(checkRandomTest checkRandomTest.cpp vm.cpp TestHelper.cpp)

target_link_libraries(testeth ${Boost_UNIT_TEST_FRAMEWORK_LIBRARIES})
target_link_libraries(testeth ${CURL_LIBRARIES})
target_link_libraries(testeth ethereum)
target_link_libraries(testeth ethcore)
target_link_libraries(testeth secp256k1)
target_link_libraries(testeth solidity)
if (NOT HEADLESS)
	target_link_libraries(testeth webthree)
	target_link_libraries(testeth natspec)
endif()
if (JSONRPC)
	target_link_libraries(testeth web3jsonrpc)
	target_link_libraries(testeth ${JSON_RPC_CPP_CLIENT_LIBRARIES})
endif()

target_link_libraries(createRandomTest ${Boost_UNIT_TEST_FRAMEWORK_LIBRARIES})
target_link_libraries(createRandomTest ethereum)
target_link_libraries(createRandomTest ethcore)
target_link_libraries(checkRandomTest ${Boost_UNIT_TEST_FRAMEWORK_LIBRARIES})
target_link_libraries(checkRandomTest ethereum)
target_link_libraries(checkRandomTest ethcore)

